--- a/id1354/sem1/html/index.html
+++ b/id1354/sem1/html/index.html
@@ -4,24 +4,22 @@
     <meta charset="UTF-8">
     <title>TASTY RECIPES</title>
     <link rel="stylesheet" type="text/css" href="../css/reset.css">
-    <link rel="stylesheet" type="text/css" href="../css/index.css">
+    <link rel="stylesheet" type="text/css" href="../css/styleGeneral.css">
 </head>
 
 <body>
-    <div id="header"></div>        
+    <div id="banner"></div>        
 
     <nav id="navbar">
-            <div class="container">
             <ul>
                 <li><a href="index.html">Front page</a></li>
                 <li><a href="calendar.html">Calendar</a></li>
                 <li><a href="rMeatballs.html">Meatballs</a></li>
                 <li><a href="rPancakes.html">Pancakes</a></li>
             </ul>
-            </div>
         </nav>
 
-        <div class="rHeader">
+        <div class="header">
                 <h1>New recipe calendar</h1>
                 </div>
   
