--- a/id1354/sem1/html/rMeatballs.html
+++ b/id1354/sem1/html/rMeatballs.html
@@ -4,23 +4,22 @@
     <meta charset="UTF-8">
     <title>Meatballs - Tasty Recipes</title>
     <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/styleGeneral.css">
+    <link rel="stylesheet" href="../css/styleRecipe.css">
 </head>
 <body>
-        <div id="header"> </div>     
+        <div id="banner"> </div>     
 
         <nav id="navbar">
-                <div class="container">
                 <ul>
                     <li><a href="index.html">Front page</a></li>
                     <li><a href="calendar.html">Calendar</a></li>
                     <li><a href="rMeatballs.html">Meatballs</a></li>
                     <li><a href="rPancakes.html">Pancakes</a></li>
                 </ul>
-                </div>
             </nav>
 
-    <div class="rHeader">
+    <div class="header">
     <h1>Meatballs</h1>
     </div>
 
